@@ -36,6 +36,7 @@ Version 1.0.xxxx (December xxth 2013)
 - Implemented: Polish translation (Thanks to Jastrzi !)
 - Fixed: URL encoding in Edit Light/Switch
 - Implemented: Creation of 2 new database parameters in DeviceStatus
+- Implemented: Creation of auto backup folders
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
